# chao-platform

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG-v3.md  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.ai-agents/: AGENTS.md  chao-v3.md
.github/: pull_request_template.md
config/: agents.toml  llm-providers.toml  repositories.toml
docs/: 00-chao-v3-design-overview.md  01-chao-principles-v3.md  02-three-departments-responsibilities-v3.md  03-six-ministries-responsibilities-v3.md  04-agent-system-design-v3.md  05-implementation-plan-v3.md  06-technical-architecture-v3.md  07-data-and-memory-architecture-v3.md  08-mcp-tool-permission-design-v3.md  09-skills-design-spec-v3.md  10-engineering-gates-quality-system-v3.md  11-data-storage-boundary-v3.md  12-current-project-progress-v3-alpha.md  13-next-development-plan-v3.md  14-codex-handoff-guide.md  15-pgvector-ingest-policy-v3.md  16-agent-runner-sandbox-boundary-v3.md  17-agent-runner-execution-v3.md  17-llm-provider-config-v3.md  18-first-run-self-upgrade-runbook.md  99-file-index.md
scripts/: bootstrap_db.sh  check.sh  check_pr_task_binding.py  context_embeddings.py  data_boundary_check.py  first_run_smoke.sh  ingest_markdown.py  record_github_delivery.py  schema_check.py  search_context.py  self_upgrade_e2e_smoke.sh
tests/: test_agents.py  test_approval.py  test_bingbu_artifacts.py  test_cli_agents.py  test_cli_doctor.py  test_cli_github_bind.py  test_cli_governance.py  test_cli_llm_chat.py  test_cli_llm_providers.py  test_cli_mcp_sdk.py  test_cli_repositories.py  (+61 more)
(+185 files in other folders)
